# jostrid

./: .dockerignore  .env  Cargo.toml  Dockerfile  docker-compose.local.yml  package-lock.json  staticwebapp.config.json
.github/workflows/: azure-static-web-apps-happy-stone-0ace79303.yml  azure-static-web-apps.yml
http/: expense.http
migrations/: 20240810120624_users.up.sql  20240810120652_expense.down.sql  20240810120652_expense.up.sql  20241219184203_auth.down.sql  20241219184203_auth.up.sql  20250119135600_phone.down.sql  20250119135600_phone.up.sql  20250216090330_category_cleanup.up.sql  20250222200757_image.down.sql  20250222200757_image.up.sql
src/: main.rs
src/api/: auth.rs  balance.rs  expense.rs  expense_category.rs  image.rs  me.rs  mod.rs  oauth.rs  user.rs
src/db/: balance.rs  expense.rs  expense_category.rs  image.rs  mod.rs  user.rs
src/server/: application.rs
src/service/: auth_service.rs
web/: .env  .gitignore  index.html  package-lock.json  package.json  pwa-assets.config.ts  staticwebapp.config.json  swa-cli.config.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  routes.tsx
web/src/components/: AppCard.tsx  CategoryIcon.tsx  ExpenseAmount.tsx  ExpenseStatusCard.tsx  Link.tsx  NewExpenseModal.tsx  SettleUpModal.tsx  TopMenu.tsx
web/src/hooks/: useApiClient.ts  useAuth.ts  useCookie.ts  useData.ts  useExpenseCategory.ts  useExpenses.ts  useImages.ts  useMe.ts  useToast.tsx  useTypedLoaderData.ts  useUser.ts
web/src/lib/: utils.ts
web/src/loaders/: expenseLoader.ts
web/src/pages/: ExpenseListPage.module.css  ExpenseListPage.tsx  ExpensePage.tsx  HomePage.tsx  LoginPage.tsx  OauthCallbackPage.tsx  (+2 more)
(+2 files in other folders)
